# mandelbruh

./: .gitignore  CMakeLists.txt  README.md
cpu/: CMakeLists.txt
cpu/src/: main.cpp  main.qml  mandelbruh.cpp  mandelbruhview.cpp
gpu/: CMakeLists.txt
gpu/res/: Mandelbrot.shader
gpu/src/: main.cpp
qt_gpu/: CMakeLists.txt
qt_gpu/src/: mandelbruhview2.cpp  mandelbruhview2.h  pch.h  res.qrc
qt_gpu/src/mandelbruh1/: mandelbruh.cpp  mandelbruh.h  mandelbruhview.h
src/: backend.cpp  backend.h  main.cpp  main.qml  mandelbruh.cpp  mandelbruh.h  mandelbruhview2.cpp  pch.h  res.qrc
src/Components/: Mandelbruh1.qml  WindowList.qml
src/imports/Theme/: Theme.qml
